--- a/ControlDePPySS/FrmAcercaDe.resx
+++ b/ControlDePPySS/FrmAcercaDe.resx
@@ -123,9 +123,7 @@ prácticas profesionales y servicio social.
 
 Desarrollado por Ángel Daniel Alonso Tovar, Christopher
 Ruiz Aquino y Ricardo López Torrez, para la materia
-"Ingeniería en Software III".
-
-Versión r1.0.1. Diciembre de 2016.</value>
+"Ingeniería en Software III".</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
